--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,3 +4,119 @@ $font-family-base: 'Raleway', sans-serif;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+.navbar{
+	margin-top: 50px;
+	height: 170px;
+	&.navbar-default{
+		background-color: transparent;
+		border-color: transparent;
+	}
+	.container{
+		height: 100%;
+		.navbar-header {
+		    width: 100%;
+		    height: 100%;
+		    display: flex;
+		    align-items: center;
+		    .navbar-brand{
+		    	display: block;
+		    	height: 100%;
+		    	padding: 0;
+		    }
+			.navbar-toggle {
+				display: block;
+				float: right;
+				order: 2;
+			    margin-left: auto;
+				border-color: transparent;
+				&:hover{
+					background-color: transparent;
+				}
+				&:focus{
+					background-color: transparent;
+				}
+				.icon-bar{
+					background-color: white;
+				}
+			}
+		}
+	}
+}
+
+.jumbotron{
+	height: 100vh;
+	padding-top: 140px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	margin-bottom: 0;
+	transition: all 0.2s linear;
+	&.bg01{
+		background-image: url(../images/img_index/bg01.png);
+	}
+	&.bg02{
+		background-image: url(../images/img_index/bg02.png);
+	}
+	&.bg03{
+		background-image: url(../images/img_index/bg03.png);
+	}
+	&.index-ff{
+		.images{
+			#img_index_center02{
+				margin-left: 45px;
+			}
+			.img-center{
+				height: 311px;
+			}
+		}
+		.buttons{
+			margin-top: 35px;
+			.btn{
+				border-radius: 0px;
+				height: 40px;
+				line-height: 26px;
+				font-size: 15px;
+				font-weight: 400;
+				&.btn-warning{
+					background-color: #EDBF37
+				}
+				&.btn-default{
+					background-color: white;
+					color: #9E9E9E
+				}
+				&:hover{
+					box-shadow: 5px 5px 30px -8px black;
+					transition: all 1s linear;
+				}
+			}
+		}
+	}
+	.container{
+		
+	}
+}
+.modal-nav-content {
+  width: 100%;
+  height: auto;
+	.modal-nav-body {
+		margin-top: 100px; 
+		ul{
+			list-style-type: none;
+			color: white;
+			margin: 0;
+			padding: 0;
+			width: 100%;
+			li {
+				text-align: center;
+				font-size: 130%;
+				padding: 8px;
+				text-transform: uppercase;
+			}
+		}
+	}	
+}
+footer{
+	text-align: center;
+	color: white;
+	opacity: 0.5;
+	height: 50px;
+}
