--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@ $font-family-base: 'Raleway', sans-serif;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+
 .navbar{
 	margin-top: 50px;
 	height: 170px;
@@ -29,14 +30,39 @@ $font-family-base: 'Raleway', sans-serif;
 				order: 2;
 			    margin-left: auto;
 				border-color: transparent;
-				&:hover{
-					background-color: transparent;
-				}
-				&:focus{
-					background-color: transparent;
+				height: 50px;
+				width: 50px;
+				border-radius: 50%;
+				padding-left: 13px;
+				&.collapsed {
+					.icon-bar{
+						&:nth-child(2){
+							transform: rotate(0)translateY(0)translateX(0);
+						}
+						&:nth-child(3){
+							opacity:1
+						}
+						&:nth-child(4){
+							transform:rotate(0)translateY(0)translateX(0);
+						}
+					}
 				}
 				.icon-bar{
+					transition: .5s ease;
 					background-color: white;
+					&:nth-child(2){
+						transform: rotate(-45deg)translateY(5px)translateX(-5px);
+					}
+					&:nth-child(3){
+						opacity: 0
+					}
+					&:nth-child(4){
+						transform:rotate(45deg)translateY(-4px)translateX(-3px);
+					}
+				}
+				&:hover,&:focus{
+					background-color: rgba(0, 0, 0, 0.5);
+					transition: all 0.2s linear;
 				}
 			}
 		}
@@ -71,13 +97,16 @@ $font-family-base: 'Raleway', sans-serif;
 		.buttons{
 			margin-top: 35px;
 			.btn{
-				border-radius: 0px;
+				border-radius: 3px;
+				border-color: transparent;
 				height: 40px;
 				line-height: 26px;
 				font-size: 15px;
 				font-weight: 400;
+				box-shadow: 2px 2px 20px -8px black;
 				&.btn-warning{
-					background-color: #EDBF37
+					background-color: #EDBF37;
+					box-shadow: 5px 5px 30px -8px #9d5c00;
 				}
 				&.btn-default{
 					background-color: white;
@@ -85,7 +114,7 @@ $font-family-base: 'Raleway', sans-serif;
 				}
 				&:hover{
 					box-shadow: 5px 5px 30px -8px black;
-					transition: all 1s linear;
+					transition: all 0.2s linear;
 				}
 			}
 		}
@@ -94,29 +123,57 @@ $font-family-base: 'Raleway', sans-serif;
 		
 	}
 }
-.modal-nav-content {
-  width: 100%;
-  height: auto;
-	.modal-nav-body {
-		margin-top: 100px; 
-		ul{
-			list-style-type: none;
-			color: white;
-			margin: 0;
-			padding: 0;
-			width: 100%;
-			li {
-				text-align: center;
-				font-size: 130%;
-				padding: 8px;
-				text-transform: uppercase;
+#body-home{
+	background-color: black;
+}
+#menu{
+	display: none;
+	background: rgba(5,29,44,1);
+	background: -moz-linear-gradient(45deg, rgba(5,29,44,1) 0%, rgba(27,60,81,1) 100%);
+	background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(5,29,44,1)), color-stop(100%, rgba(27,60,81,1)));
+	background: -webkit-linear-gradient(45deg, rgba(5,29,44,1) 0%, rgba(27,60,81,1) 100%);
+	background: -o-linear-gradient(45deg, rgba(5,29,44,1) 0%, rgba(27,60,81,1) 100%);
+	background: -ms-linear-gradient(45deg, rgba(5,29,44,1) 0%, rgba(27,60,81,1) 100%);
+	background: linear-gradient(45deg, rgba(5,29,44,1) 0%, rgba(27,60,81,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#051d2c', endColorstr='#1b3c51', GradientType=1 );
+	width: 100%;
+	height: 100vh;
+	.modal-nav-content {
+		padding-top: 150px;
+		.modal-nav-body {
+			position: relative;
+			z-index: 100000;
+			width: 400px;
+			margin: auto;
+			ul{
+				list-style-type: none;
+				color: white;
+				margin: 0;
+				padding: 0;
+				width: 100%;
+				li {
+					text-align: center;
+					font-size: 130%;
+					padding: 2px 8px;
+					cursor: pointer;
+					&:hover{
+						color: #5f9ee1;
+					}			
+					&.more-padding{
+						padding: 15px 8px;
+					}
+				}
 			}
-		}
-	}	
+		}	
+	}
 }
 footer{
 	text-align: center;
 	color: white;
 	opacity: 0.5;
 	height: 50px;
+	transition: all 0.2s linear;
+	&.no-opa{
+		opacity: 1;
+	}
 }
